# practice

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/workflows/: linters.yaml  publish.yaml  tests.yaml
foxy/: main.py
foxylint/: imports.py  loggingcase.py  main.py  noyml.py
foxyy/: imports.py  main.py
guideance/: setup.md
pre-commit-sentinels/: README.md
tests/: test_blackbox.py
tests/fixtures/: bad.py  good.py
