[tool.poetry]
name = "foxyy"
version = "0.1.1"
description = ""
authors = ["Yoav Kleinberger <haarcuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

pytest = "^8.3.3"
ptpython = "^3.0.29"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
foxyy-imports = 'foxyy.main:main'
