[tool.poetry]
name = "foxylint"
version = "1.3.0"
description = ""
authors = ["Yoav Kleinberger <haarcuba@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
twine = "^5.1.1"

pytest = "^8.3.3"
ptpython = "^3.0.29"
python-box = "^7.2.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
foxylint-main = 'foxylint.main:main'
foxylint-noyml = 'foxylint.noyml:main'
